--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -224,24 +224,35 @@ Bundesliga is an independent body , sperated from the German Football Associatio
 \newpage
 \section{Empirical strategy}\label{sec_soc_ext:empirical_strategy}
 
+In order to identify the causal effect of soccer matches on criminal behavior, I exploit time series and cross-sectional variation. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
 
 
+The identification strategy is based on a generalized difference-in-differences approach to study the impact of a soccer match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$, which in the simple baseline model is given by:\footnote{For ease of comparison, the assault rate is defined as the number of assaults per 100,000 individuals multiplied with the number of days per year. For details, refer to \cite{hener2019noise}.}
 
 \begin{align}
-	\text{Assaults}_{rdmy} = \alpha + \beta\ \text{Gameday}_{rdmy} + \underbrace{\gamma_d +  \eta_m + \theta_y}_{\text{date}_{dmy}} + \vartheta_r + \mathbf{X}_{rdmy} \lambda + \varepsilon_{rdmy}
-	\label{eq_soc_ext:model}
+	\text{Assaults}_{rdmy} = \alpha + \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \underbrace{\gamma_d +  \eta_m + \theta_y}_{\text{date}_{dmy}} + \lambda \mathbf{X}_{rdmy} + \varepsilon_{rdmy}
+	\label{eq_soc_ext:model}.
 \end{align}
-with Assaults$_{rdmy}$ is the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. Number of assaults per 100,000 individuals times 365. $\mathbf{X}_{rdmy}$ contains school and public holidays and weather controls.\newline
 
-\underline{What I did in the analysis:} 
-\begin{itemize}
-	\item regressions weighted by population weights
-	\item interactions of region and time fixed effects
-	\item standard errors: twoway cluster (i) district-year and (ii) year-month
-\end{itemize}
+$\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home games takes place and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects and long-run time trends. I expand on the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Holiday controls include binary variables (on the level of the Federal States) for All Saints, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for carnival season and New Year's Eve.\newline Weather controls (on the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, sunshine duration, snow depth, and wind speed-.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted using population figures from the Federal Statistical Office.
 
 
+The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior, is that the location and the time of a soccer match is orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighbouring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a soccer match on violent behavior as the offense would would have been committed anyway, but just another time or at another place.
 
+
+Adress the challenges by X and X. 
+I find bla
+
+
+XXX only specification of home game: when there is an away game this could mean particularly aggresive fans are out of town, which might decrease the assault rate. check for that (see Helmut's comments on that)
+I find bla
+
+
+
+
+
+
+\newpage
 \subsection{Idea collection}
 \underline{Further Possible interactions:} 
 \begin{itemize}
@@ -265,13 +276,6 @@ with Assaults$_{rdmy}$ is the assault rate in region $r$, on day-of-the-week $d$
 	\item focus on only season (i.e. exclude winter break)
 	\item how many games are played on holidays? drop these? 
 	\item drop when information of crime is not available on the hour
-\end{itemize}
-
-
-
-\underline{other remarks:}
-\begin{itemize}
-	\item Spieltag fixed effects?
 \end{itemize}
 
 
@@ -303,7 +307,7 @@ The data on soccer matches is self-collected and is obtained via web-scraping fr
 
 % XXX  stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6\% of all matches.}
 
-Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The three different divisions can attract spectators differently, as depicted in Panel C. The Bundesliga as the highest tier can intrigue the most people to show up with an average audience of 44,000 people per game, followed by the second league with on average 17,000 fans per match, and the lowest league can attract on average a bit less than 6,000 fans per game to show up in the stadium.
+Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday.\footnote{The inclusion of day-of-week fixed effects in the baseline specification help to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior.} This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The three different divisions can attract spectators differently, as depicted in Panel C. The Bundesliga as the highest tier can intrigue the most people to show up with an average audience of 44,000 people per game, followed by the second league with on average 17,000 fans per match, and the lowest league can attract on average a bit less than 6,000 fans per game to show up in the stadium.
 
 
 
@@ -355,7 +359,7 @@ The Federal Statistical Office and the statistical offices of the Länder provid
 	\begin{itemize}
 		\item different specification of what are the affected regions, vary radius around stadium which region is affected: at first use only region (gemeinde/Kreis) in which the stadium is located, then play around with radius.
 
-		\item placebo games?
+		\item placebo games and placebo outcomes (any type that is not affected)?
 		\item control for mass events (see BHR paper)
 		\item drop Nachholspiele
 	\end{itemize}
